# bookstore

./: Docker-cheatsheets.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
order/: urls.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/migrations/: 0001_initial.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_product_viewset.py
