[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Alison Oliveira <alison.oliveira89@gmail.com>"]
readme = "README.md"
packages = [{include = "bookstore"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^5.0.1"
pytest = "^8.3.5"
pytest-django = "^4.10.0"
factory-boy = "^3.3.3"
black = "^25.1.0"
psycopg2-binary = "^2.9.10"
gitpython = "^3.1.44"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
